--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "start": "npm-run-all --parallel watch:sass watch:files",
-    "watch:sass": "node-sass -w dist/scss/index.scss -o dist/css --output-style compressed",
+    "watch:sass": "node-sass -w dist/**/*.scss -o dist/css --output-style compressed",
     "watch:files": "browser-sync start --server --files 'dist/**/*.css, dist/**/*.html, dist/**/*.js, !node_modules/**/*'"
   },
   "repository": "git@github.com:Matheus-Alpe/desafio-webdesign-linx.git",
