--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "npm-run-all --parallel watch:sass watch:files",
+    "start": "node index.js",
+    "dev": "npm-run-all --parallel watch:sass watch:files",
     "watch:sass": "node-sass -w scss/*.scss -o dist/css --output-style compressed",
     "watch:files": "browser-sync start --server --files 'dist/**/*.css, dist/**/*.html, dist/**/*.js, !node_modules/**/*' --directory --port 6969"
   },
@@ -11,8 +12,11 @@
   "author": "Matheus Alves Pereira <matttalves@gmail.com>",
   "license": "MIT",
   "devDependencies": {
-    "browser-sync": "^2.27.4",
+    "browser-sync": "2.27.4",
     "node-sass": "6.0.1",
-    "npm-run-all": "^4.1.5"
+    "npm-run-all": "4.1.5"
+  },
+  "dependencies": {
+    "express": "4.17.1"
   }
 }
